--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
     <center>
 
-      <h3 style="color: rgb(255, 255, 255);">Emotion TO Emoji
+      <h3 style="color: rgb(255, 255, 255);">Gesture TO Emoji
         <br>
         <span>&#128076;</span>
         <span>&#128077;</span>
